Fixed the `filter` link display, as sometimes it will overlap the "Translate this page" link. Style it the same as "Translate this page" instead.

--- a/gfp/css/gui.sass
+++ b/gfp/css/gui.sass
@@ -3,12 +3,8 @@
   display: none
 
 .filter-add
-  display: inline-block
-  margin: 0 2px 3px 2px
-  height: 14px
-  vertical-align: middle
-  font-size: 10px
-  letter-spacing: 0.75px
+  margin-left: 5px
+  font-size: 14px
   text-decoration: none
   &:hover
     text-decoration: underline
